--- a/packages/social_share_plugin_android/android/build.gradle
+++ b/packages/social_share_plugin_android/android/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
-
+    namespace com.cygnati.social_share_plugin
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
